src/test/resources/etapa3/passing/accepting_test_1.ru
struct A {
	pri Str str_a, str_b;
	Int int_a;
	Array Int arr_1;
}
impl A {
	fn method_a(Int a, Int b) -> Int {
		Y y1, y2;
		Int c;
	}
	.(){}
}
start {
    Int a;
    A b;
}