src/test/resources/etapa3/failing/structWithNoImpl.ru
struct A {
    Int a, b;
}

start {}